--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/JeydinNewWon/MyJSDiscordBot.git"
   },
   "author": "JeydinNewWon",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/JeydinNewWon/MyJSDiscordBot/issues"
   },
